# 3D_Semantic_Occupancy_TruckScenes

./: .gitignore  LICENSE  README.md
gt_generation/: .dockerignore  config_truckscenes.yaml  crop_occupancy_grid_736x736x32.py  environment.yaml  flexcloud.yaml  kiss_config.yaml  multiframe_ego_kiss_dynagg_flexcloud.py  multiframe_ego_kiss_dynagg_new.py  part1_preprocess.py  part1b_create_rosbag.py  part1b_create_rosbag2.py  part2_run_flexcloud.py  part3_postprocess.py  part3_postprocess_reduced_static.py  part_smoothing_ccma.py  run_pipeline.sh  run_pipeline_docker.sh  truckscenes.yaml
gt_generation/Docker/: Dockerfile  environment.yaml
gt_generation/MapMOS/: LICENSE
gt_generation/MapMOS/src/mapmos/: pipeline.py
gt_generation/MapMOS_old/config/: trscenes.yaml
gt_generation/MapMOS_old/src/mapmos/: odometry.py
gt_generation/additional_scripts/annotations_json_generation/: json_annotation.py
gt_generation/additional_scripts/crop_occupancy/: crop_occupancy_grid_736x736x32.py
gt_generation/additional_scripts/manual_annotation_terminal_scenes/: annotate_nonkeyframes_terminal.py  interpolate_keyframes.py
gt_generation/additional_scripts/scene_exploration/: analyze_motion_profile.py  changing_objects.py  find_bbox_size_forklift.py  find_bbox_size_truck.py  find_overlapping_objects.py  find_overlapping_objects_area.py  find_overlapping_objects_area_full.py  find_terminal_scenes.py  mapmos_out.py  samples_count.py  scene_description_nuscenes.py  scene_description_truckscenes.py  scene_exploration.py  scene_exploration_nuscenes.py  scene_finder.py  timestamp_comparison.py
gt_generation/flexcloud/: CMakeLists.txt
gt_generation/flexcloud/config/: pcd_georef.yaml  select_keyframes.yaml
gt_generation/flexcloud/include/flexcloud/: flexcloud.hpp
gt_generation/flexcloud/src/: bindings.cpp  flexcloud.cpp  keyframe_interpolation.cpp
gt_generation/kiss-icp/: kiss_icp.yaml
gt_generation/kiss-icp/python/kiss_icp/: kiss_icp.py  pipeline.py
gt_generation/rosbag/: Dockerfile
gt_generation/utils/: bbox_utils.py  constants.py  custom_datasets.py  data_utils.py  geometry_utils.py  occupancy_utils.py  pointcloud_loading.py  pointcloud_processing.py  refinement.py  visualization.py
prediction/: Dockerfile
prediction/BEVFormer/: create_data.sh  pkl_check.py  pred_gt_vis_nuscenes.py  run_test.sh  run_training_multi_gpu.sh
prediction/BEVFormer/Docker/cuda_111/: Dockerfile  requirements.txt
prediction/BEVFormer/Docker/cuda_118/: Dockerfile
prediction/BEVFormer/Docker/cuda_121/: Dockerfile
prediction/BEVFormer/tools/: create_data.py  train.py
prediction/BEVFormer200x16/: gt_class_count.py  pred_gt_vis.py  run_training.sh  run_training_cuda12.sh  run_training_multi_gpu_resume.sh  run_training_multi_gpu_syncbn.sh
prediction/BEVFormer200x16/tools/: train.py
prediction/GaussianFormer/: Dockerfile  eval.py  eval_save.py  run_test_prob.sh  run_training_multi_gpu_prob.sh  run_training_multi_gpu_prob_decoder_low.sh  run_training_multi_gpu_prob_embed.sh  train.py
prediction/GaussianFormer/Docker/cuda_118/: Dockerfile
prediction/GaussianFormer/additional_scripts/: class_counts_boxes.py  class_weights_truckscenes.py
prediction/GaussianFormer/config/: nuscenes_gs25600_solid.py
prediction/GaussianFormer/dataset/: dataset.py  transform_3d.py
prediction/GaussianFormer/loss/: bce_loss.py  occupancy_loss.py
prediction/GaussianFormer/tools/: Dockerfile  create_data.py
prediction/GaussianFormerLow/: eval.py  readme.md  run_training.sh  run_training_h100.sh  run_training_multi_gpu.sh  train.py
prediction/GaussianFormerLow/additional_scripts/: class_weight_occupancy.py  class_weights_nuscenes.py  pickle_explore.py
prediction/GaussianFormerLow/config/: nuscenes_gs25600_solid.py
prediction/GaussianFormerLow/dataset/: __init__.py  dataset.py  transform_3d.py
prediction/GaussianFormerLow/loss/: occupancy_loss.py
prediction/GaussianFormerLow/misc/: metric_util.py
prediction/GaussianFormerOne/: eval_vis.py  run_test.sh  run_test_prob_vis.sh  run_training.sh  run_training_multi_gpu_prob_continue.sh  train.py  visualize.py
prediction/GaussianFormerOne/additional_scripts/: check_pickle.py
prediction/GaussianFormerOne/dataset/: transform_3d.py
prediction/GaussianFormerOne/tools/: create_data.py
prediction/GaussianFormerOne200x16/: eval_save.py  run_training_h100.sh  run_training_multi_gpu.sh  run_training_multi_gpu_prob.sh  run_training_multi_gpu_prob_decoder_embed.sh  run_training_multi_gpu_prob_high.sh  run_training_prob.sh  train.py  vis.py
prediction/GaussianFormerOne200x16/additional_scripts/: pickle_checker.py
prediction/GaussianFormerOne200x16/config/: nuscenes_gs25600_solid.py
prediction/GaussianFormerOne200x16/dataset/: __init__.py  transform_3d.py
prediction/GaussianFormerRadii/: run_training_multi_gpu_prob.sh
prediction/GaussianFormerRadii/config/: nuscenes_gs144000.py  nuscenes_gs25600_solid.py
prediction/SparseOcc/: Dockerfile  run_training.sh  run_training_mulit_gpu.sh
prediction/SparseOcc/Docker/: Dockerfile
prediction/SparseOcc/additional_scripts/: check_pickle.py  find_top_k.py  pickle_checker_base.py
prediction/SparseOcc/configs/: r50_nuimg_704x256_8f.py
prediction/SparseOcc/loaders/: nuscenes_occ_dataset.py  old_metrics.py  ray_metrics.py  ray_pq.py
prediction/SparseOcc/models/: loss_utils.py  matcher.py  sparse_voxel_decoder.py  sparsebev_sampling.py  sparsebev_transformer.py  sparseocc.py  sparseocc_head.py  sparseocc_transformer.py
prediction/SparseOcc200x16/configs/: r50_nuimg_704x256_8f.py
prediction/SparseOcc200x16/loaders/: nuscenes_occ_dataset.py  old_metrics.py
prediction/SparseOcc200x16/models/: sparsebev_sampling.py  sparseocc.py  sparseocc_head.py  sparseocc_transformer.py
prediction/SparseOcc200x16/nuscenes_infos_with_sweeps/: nuscenes_infos_val_mini_sweep.pkl
(+93 files in other folders)
